<resources>
    <string name="app_name">Cartão de Visitas Digital</string>
    <string name="tv_title_txt">Cartão de visita</string>
    <string name="tv_Addtitle_txt">Novo Cartão</string>
    <string name="btConfirmar_desc">Botão Confirmar</string>
    <string name="btConfirmar_txt">Confirmar</string>
    <string name="btFechar_desc">Botão Fechar</string>
    <string name="tvAddTitle_desc">Titulo da Activity</string>
    <string name="etName_hint">Nome completo</string>
    <string name="etPhone_hint">Telefone</string>
    <string name="etEmail_hint">Email</string>
    <string name="etCompany_hint">Empresa</string>
    <string name="apelido_hint">Apelido</string>
    <string name="ibAdd_desc">Botão Adicionar</string>
    <string name="addToast_Txt">Registro inserido com sucesso!</string>
    <string name="toastImgSuccess_txt">Imagem capturada com sucesso!</string>
</resources>