<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_escuro"
    tools:context=".ui.AddBusinessCardAc"
    >

    <ImageButton
        android:id="@+id/ib_Close"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:background="@mipmap/closethis_foreground"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:contentDescription="@string/btFechar_desc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/closethis_foreground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_Addtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_Addtitle_txt"
        android:textColor="@color/pamonha"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_Close" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/etName_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/roxo"
        android:textColor="@color/pamonha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Addtitle" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/etPhone_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="@color/roxo"
        android:textColor="@color/pamonha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/etEmail_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/roxo"
        android:textColor="@color/pamonha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/etCompany_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/roxo"
        android:textColor="@color/pamonha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@drawable/custombutton"
        android:text="@string/btConfirmar_txt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompany"

        />

</androidx.constraintlayout.widget.ConstraintLayout>